fix chat box on firefox

--- a/static/css/multistreamer.css
+++ b/static/css/multistreamer.css
@@ -38,6 +38,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: auto;
 }
 
 #viewwrapper {
